[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "atpb-gstr-clix"
dynamic = ["version"]
description = "atpb-gstr command-line utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
atpb-gstr-clix = "atpb_gstr_clix.clix:main"

[tool.setuptools]
packages = ["atpb_gstr_clix", "atpb_gstr_clix.commands"]

[tool.setuptools.package-data]
atpb_gstr_clix = ["py.typed"]

[tool.setuptools_scm]
# Keep in sync with atpb_gstr_clix.commands.constants.PKG_VERSION_FALLBACK
fallback_version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["atpb_gstr_clix", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["atpb_gstr_clix"]
